apps/prod/nj/www.smotra.net/http-route/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute                                
metadata:
  name: www-smotra-net
spec:
  hostnames:
  - www.smotra.net
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: public-gateway
    namespace: ingress-gateways
    sectionName: http
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: app
      port: 80
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
